--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "autoload": {
         "psr-4": {
-          "Alexspi\\Spares\\": "src/"
+          "Alexspi\\Spares\\": "src/",
           "Alexspi\\Spares\\Http\\Controllers\\": "src/Http/Controllers/"
         },
 
